--- a/src/pages/posts/03-ai工作流.md
+++ b/src/pages/posts/03-ai工作流.md
@@ -9,7 +9,18 @@
 3. **[这样设置Prompt，让ChatGPT输出更好的效果！为ChatGPT提供更合适的Prompt输入，我们就能得到更优质的 - 掘金](https://juejin.cn/post/7232480698879623223)**:吴恩达课程(写大模型提示词)的笔记,分享了一些写好Prompt的方法
 4. **[线程入门](http://www.alloyteam.com/2020/07/14657/)**：也是 alloyteam 的，结合 JS 将线程原理讲的也非常深入浅出
 5. **[What is AppData, and what are Local, LocalLow, and Roaming?](https://www.xda-developers.com/appdata/)**:Windwos里的AppData/Local/LocalLow/Roaming目录及作用
-
+6. **[好老板,Fornever 收集的与老板Steve的共事记录](https://www.douban.com/note/868882841)**: 
+   > 最近一周我经常骚扰有过一面之缘的中国小哥，问了几个他也接触过的服务的傻问题。聊天记录一共不到二十句，但确实帮我们这个新团队解决了大问题。Steve 给我提了建议，「我们给他发个 Accolades 吧。」 （Accolades 是我们一个内部系统，大概就相当于感谢信）
+   几分钟后，他发来一个草稿给我，问我行不行：
+   I suspect [小哥] has no idea what a super hero is to my team.  By being incredibly gracious and responsive to our XXX-related questions, he has unblocked us or solved a significant issue at least three times (by walking through our use case and introducing us to XXX in the first place, by helping understand  the logic of XXX, and by showing us how to deal with the YYY).  This goes way beyond his official duties. He’s not just a capable and knowledgable engineer -- he’s generous enough to share that knowledge with a completely unrelated team.  [小哥], you are unquestionably an asset to our company. Thank you!
+   
+   > 我说这是什么语言的艺术，太行了啊。他淡定回复： You write code. I wrote documents.
+   
+   >临发送前他还和我征求意见： I think it would feel good if you sent it, because you’re the contact...  But.  Politics.  I think it’ll be more impactful if it comes from your manager.  Will that work for you?
+   之前我说我 total package 的一半都是靠 Steve 撑起来的，现在看来需要修正一下，和他能提供的职业/情绪价值相比，我的工作成果，都是赠品。
+    
+   > 观点:Q4. 如果你的孩子向你寻求恋爱建议，你会说些什么？
+      慢慢来！虽然这听起来不太浪漫，但找到合适的人不仅取决于这个人本身，还取决于你生命中的那个阶段是否合适。留意当你和这个人在一起时，你对自己的感受。合适的人会让你感到自信，成为最好的自己。而在一段让你感觉不好或自我怀疑的关系中，你是非常容易感到困扰的。你需要有勇气结束那些不健康的关系。观察你的关系对你整个社交圈的影响。在我们的经验中，成功和健康的关系会拓宽你的社交圈——比如，你的朋友会成为他们的朋友等等。而我们认为，一段关系难以长久的一个迹象是，当对方过于占有你，或者对你与其他亲密关系感到威胁。
 ### 开源和工具
 
 1. **[Haikei](https://app.haikei.app/)**：纯色图片生成工具，可以生成各种风格的背景,logo,支持png,svg
